--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Mai dátum és idő megjelenítése</button>
             <input class="btn btn-outline-primary" type="reset" value="Törlés">
             <p id="demo"></p>
-        <img src="kepek/w3kicsi.png" alt="ctrlcctrlv">
+        <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_myfirst" target="blank"><img src="kepek/w3kicsi.png" alt="ctrlcctrlv"></a>
         </div>
         <hr rounded="solid">
         <div class="masodik">
@@ -33,7 +33,7 @@
 
             <button class="btn btn-outline-primary" onclick="document.getElementById('myImage').src='kepek/pic_bulboff.gif'">Kapcsold le!</button>
             <br><br>
-            <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_myfirst"><img src="kepek/w3kicsi.png" alt="ctrlcctrlv"></a>
+            <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_intro_lightbulb" target="blank"><img src="kepek/w3kicsi.png" alt="ctrlcctrlv"></a>
             <hr rounded="solid">
         </div>
         <div class="harmadik">
@@ -50,7 +50,7 @@
             <br>
             <button class="btn btn-outline-primary" type="button" onclick="document.getElementById('demo2').style.backgroundColor='orange'">Háttérszín</button>
             <br><br>
-            <img src="kepek/w3kicsi.png" alt="ctrlcctrlv">
+            <a href="https://getbootstrap.com/docs/5.0/utilities/background/" target="blank"><img src="kepek/w3kicsi.png" alt="ctrlcctrlv"></a>
             
         </div>
     </div>
