--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     </div>
     <hr rounded="solid">
         <div class="elso">
+            <form name="datum">
             <button type="button" class="btn btn-outline-primary"
-            onclick="document.getElementById('demo').innerHTML = Date()">
-            Mai dátum és idő megjelenítése</button>
-            <input class="btn btn-outline-primary" type="reset" value="Törlés">
+            onclick="document.getElementById('demo').innerHTML = Date()">Mai dátum és idő megjelenítése</button>
+            <button type="demo.reset" class="btn btn-outline-primary">Törlés</button>
+        </form>
             <p id="demo"></p>
         <a href="https://www.w3schools.com/js/tryit.asp?filename=tryjs_myfirst" target="blank"><img src="kepek/w3kicsi.png" alt="ctrlcctrlv"></a>
         </div>
