--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="kettogomb" onclick="window.print()" type="button" class="btn btn-outline-warning">Oldal nyomtatása</button>
         <br><br>
         </div>
-    <button type="button" onclick="document.getElementById('weblap').body.backgroundColor='black'" class="btn btn-outline-primary">Éjszakai mód</button>
+    <button type="button" class="btn btn-outline-primary">Éjszakai mód</button>
     <button type="button" class="btn btn-outline-primary">Nappali mód</button>
     </div>
     <hr rounded="solid">
