--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
         </div>
     </div>
 </div>
+    <h1 onclick="changeText(this)">Click on this text!</h1>
+
+        <script>
+        function changeText(id) {
+        id.innerHTML = "Ooops!";
+        }
+        </script>
     </div>
 </body>
 </html>
